--- a/ScorpionEngine.csproj
+++ b/ScorpionEngine.csproj
@@ -107,6 +107,7 @@
     <Compile Include="ParticleSystem\ParticleModifier.cs" />
     <Compile Include="ScorpionEngine.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Shapes\Circle.cs" />
     <Compile Include="Shapes\Line.cs" />
     <Compile Include="SpriteSheet.cs" />
   </ItemGroup>
