--- a/XoticEngine.csproj
+++ b/XoticEngine.csproj
@@ -94,6 +94,7 @@
   <ItemGroup>
     <Compile Include="Assets.cs" />
     <Compile Include="Extensions.cs" />
+    <Compile Include="GameObjects\Animation.cs" />
     <Compile Include="Time.cs" />
     <Compile Include="Utilities\Benchmark.cs" />
     <Compile Include="Camera.cs" />
