--- a/XoticEngine.csproj
+++ b/XoticEngine.csproj
@@ -95,6 +95,7 @@
     <Compile Include="Assets.cs" />
     <Compile Include="Extensions.cs" />
     <Compile Include="GameObjects\Animation.cs" />
+    <Compile Include="Graphics.cs" />
     <Compile Include="PostProcessingEffect.cs" />
     <Compile Include="Time.cs" />
     <Compile Include="Utilities\Benchmark.cs" />
