--- a/XoticEngine.csproj
+++ b/XoticEngine.csproj
@@ -111,6 +111,7 @@
     <Compile Include="ParticleSystem\Particle.cs" />
     <Compile Include="ParticleSystem\ParticleEmitter.cs" />
     <Compile Include="ParticleSystem\ParticleModifier.cs" />
+    <Compile Include="XGame.cs" />
     <Compile Include="XoticEngine.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Shapes\Circle.cs" />
