--- a/XoticEngine.csproj
+++ b/XoticEngine.csproj
@@ -96,10 +96,10 @@
     <Compile Include="Extensions.cs" />
     <Compile Include="GameObjects\Animation.cs" />
     <Compile Include="Graphics.cs" />
-    <Compile Include="PostProcessingEffect.cs" />
+    <Compile Include="GraphicEffects\PostProcessingEffect.cs" />
     <Compile Include="Time.cs" />
     <Compile Include="Utilities\Benchmark.cs" />
-    <Compile Include="Camera.cs" />
+    <Compile Include="GraphicEffects\Camera.cs" />
     <Compile Include="Utilities\FrameRateCounter.cs" />
     <Compile Include="Utilities\GameConsole.cs" />
     <Compile Include="GameObjects\GameObject.cs" />
@@ -116,7 +116,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Shapes\Circle.cs" />
     <Compile Include="Shapes\Line.cs" />
-    <Compile Include="SpriteSheet.cs" />
+    <Compile Include="GameObjects\SpriteSheet.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath)\Microsoft\XNA Game Studio\Microsoft.Xna.GameStudio.targets" />
