--- a/XoticEngine.csproj
+++ b/XoticEngine.csproj
@@ -97,6 +97,7 @@
     <Compile Include="Assets.cs" />
     <Compile Include="EventArguments\CharEventArgs.cs" />
     <Compile Include="EventArguments\KeyEventArgs.cs" />
+    <Compile Include="EventArguments\SliderEventArgs.cs" />
     <Compile Include="Extensions.cs" />
     <Compile Include="GameObjects\Animation.cs" />
     <Compile Include="GameObjects\AnimationGameObject.cs" />
