--- a/XoticEngine.csproj
+++ b/XoticEngine.csproj
@@ -95,6 +95,7 @@
     <Compile Include="Achievements\Achievement.cs" />
     <Compile Include="Achievements\AchievementHolder.cs" />
     <Compile Include="Assets.cs" />
+    <Compile Include="Components\Stopwatch.cs" />
     <Compile Include="EventArguments\CharEventArgs.cs" />
     <Compile Include="EventArguments\KeyEventArgs.cs" />
     <Compile Include="EventArguments\SliderEventArgs.cs" />
