Finished kinematics, extensions commenting
Some small polishes

--- a/XoticEngine.csproj
+++ b/XoticEngine.csproj
@@ -103,6 +103,7 @@
     <Compile Include="GameObjects\Animation.cs" />
     <Compile Include="GameObjects\AnimationGameObject.cs" />
     <Compile Include="GameObjects\GameStateGrid.cs" />
+    <Compile Include="GameObjects\KinematicProperties.cs" />
     <Compile Include="GameObjects\MenuItems\Alignment.cs" />
     <Compile Include="GameObjects\MenuItems\Label.cs" />
     <Compile Include="GameObjects\MenuItems\Textbox.cs" />
