--- a/XoticEngine.csproj
+++ b/XoticEngine.csproj
@@ -99,6 +99,7 @@
     <Compile Include="Enumerators.cs" />
     <Compile Include="GameObjects\IXDrawable.cs" />
     <Compile Include="GameObjects\IMovable.cs" />
+    <Compile Include="GameObjects\MenuItems\MenuItem.cs" />
     <Compile Include="GameObjects\SpriteGameObject.cs" />
     <Compile Include="Input\CharEventArgs.cs" />
     <Compile Include="Input\InputManager.cs" />
